base-installer (1.36) UNRELEASED; urgency=low

  * Remove mkinitrd.conf hacking code that worked around bugs in the woody
    version, not supported by this version of d-i.

 -- Joey Hess <joeyh@debian.org>  Wed,  5 Oct 2005 12:17:20 -0400

base-installer (1.35) unstable; urgency=low

  * Set LOGFILE in postinst to complete reversion in 1.34.

 -- Frans Pop <fjp@debian.org>  Sun,  2 Oct 2005 18:33:52 +0200

base-installer (1.34) unstable; urgency=low

  * Revert all other uses of log-output as they also seem to
    cause a hang (closes: #331240).

  * Updated translations:
    - Dutch (nl.po) by Bart Cornelis
    - Portuguese (pt.po) by Miguel Figueiredo

 -- Frans Pop <fjp@debian.org>  Sun,  2 Oct 2005 17:52:53 +0200

base-installer (1.33) unstable; urgency=low

  * Revert use of log-output when running debootstrap as it seems to
    cause a hang.

 -- Joey Hess <joeyh@debian.org>  Fri, 30 Sep 2005 20:16:17 -0400

base-installer (1.32) unstable; urgency=low

  * Use log-output throughout. Notably this means that debootstrap output is
    sent to syslog now, approptiatly flagged as such.

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 16:20:33 +0200

base-installer (1.31) unstable; urgency=low

  [ Bdale Garbee ]
  * update hppa to 2.6.12 kernels
  * add logic to support selection of SMP vs uniprocessor on hppa
  * fix kernel selection logic and related test suite, all tests pass now!

  [ Joey Hess ]
  * Turn link_in_boot back off for i386 and on for amd64 as well, as
    lilo-installer doesn't work wit it. Closes: #329994
  
  * Updated translations: 
    - Catalan (ca.po) by Guillem Jover
    - Danish (da.po) by Claus Hindsgaul
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Dutch (nl.po) by Bart Cornelis

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 15:39:47 +0200

base-installer (1.30) unstable; urgency=low

  * Switch i386 and ia64 to use linux-image-2.6-<foo> for
    base-installer/kernel/image-2.6. Now that debian-cd always includes these