@@ -35,15 +35,20 @@ arch_get_kernel () {
 	else
 		SMP=
 	fi
-	case "$1" in
-		amd64-k8)
-			echo "kernel-image-$KERNEL_MAJOR-amd64-k8$SMP"
-			;;
-		em64t-p4)
-			echo "kernel-image-$KERNEL_MAJOR-em64t-p4$SMP"
-			;;
-		*)
-			echo "kernel-image-$KERNEL_MAJOR-amd64-generic"
-			;;
-	esac
+
+	if [ "$1" = amd64-k8 ]; then
+		echo "linux-image-$KERNEL_MAJOR-amd64-k8$SMP"
+		if [ "$SMP" ]; then
+			echo "linux-image-$KERNEL_MAJOR-amd64-k8"
+		fi
+		set amd64-generic
+	fi
+	if [ "$1" = em64t-p4 ]; then
+		echo "linux-image-$KERNEL_MAJOR-em64t-p4$SMP"
+		if [ "$SMP" ]; then
+			echo "linux-image-$KERNEL_MAJOR-em64t-p4"
+		fi
+		set amd64-generic
+	fi
+	echo "linux-image-$KERNEL_MAJOR-amd64-generic"
 }
