@@ -35,11 +35,11 @@ directives are as follows:
     The expected kernel flavour for this machine.
 
   kernel-2.4 <kernel version>
-    The "best" 2.4 kernel version for this machine, as expected to be
+    The "best" 2.4 kernel versions for this machine, as expected to be
     returned by arch_get_kernel.
 
   kernel-2.6 <kernel version>
-    The "best" 2.6 kernel version for this machine, as expected to be
+    The "best" 2.6 kernel versions for this machine, as expected to be
     returned by arch_get_kernel.
 
   usable <kernel versions>
