@@ -1,7 +1,7 @@
 cpuinfo b180.cpuinfo
 machine parisc
 majors 2.6
-flavour parisc32
+flavour parisc
 kernel-2.6 linux-image-parisc
 usable \
   kernel-image-2.6.8-2-32 \
