@@ -2,7 +2,9 @@ cpuinfo paer.cpuinfo
 machine parisc64
 majors 2.6
 flavour parisc64
-kernel-2.6 linux-image-parisc64-smp
+kernel-2.6 \
+  linux-image-parisc64-smp \
+  linux-image-parisc64
 usable \
   kernel-image-2.6.8-2-32 \
   kernel-image-2.6.8-2-32-smp \
