@@ -1,7 +1,9 @@
 cpuinfo caballero.cpuinfo
 majors 2.6
 flavour mckinley
-kernel-2.6 linux-image-2.6-mckinley-smp
+kernel-2.6 \
+  linux-image-2.6-mckinley-smp \
+  linux-image-2.6-mckinley
 usable \
   linux-image-2.6-itanium \
   linux-image-2.6-itanium-smp \
