@@ -1,7 +1,9 @@
 cpuinfo merulo.cpuinfo
 majors 2.6
 flavour itanium
-kernel-2.6 linux-image-2.6-itanium-smp
+kernel-2.6 \
+  linux-image-2.6-itanium-smp \
+  linux-image-2.6-itanium
 usable \
   linux-image-2.6-itanium \
   linux-image-2.6-itanium-smp \
