@@ -2,7 +2,9 @@ subarch chrp_rs6k
 cpuinfo chrp_rs6k.cpuinfo
 majors 2.6
 flavour powerpc64
-kernel-2.6 linux-image-2.6-powerpc64-smp
+kernel-2.6 \
+  linux-image-2.6-powerpc64-smp \
+  linux-image-2.6-powerpc64
 usable \
   linux-image-2.6-powerpc64-smp \
   linux-image-2.6-powerpc64
