@@ -2,7 +2,9 @@ cpuinfo sparc32-smp.cpuinfo
 machine sparc
 majors 2.4
 flavour sparc32
-kernel-2.4 kernel-image-2.4-sparc32-smp
+kernel-2.4 \
+  kernel-image-2.4-sparc32-smp \
+  kernel-image-2.4-sparc32
 usable \
   kernel-image-2.4-sparc32 \
   kernel-image-2.4-sparc32-smp \
