@@ -1,9 +1,15 @@
 base-installer (1.36) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Remove mkinitrd.conf hacking code that worked around bugs in the woody
     version, not supported by this version of d-i.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  5 Oct 2005 12:17:20 -0400
+  [ Frans Pop ]
+  * Support defining multiple prefered kernel versions. This allows
+    base-installer to install a kernel-image meta package even if the first
+    preference is not available.
+
+ -- Frans Pop <fjp@debian.org>  Tue, 18 Oct 2005 18:48:13 +0200
 
 base-installer (1.35) unstable; urgency=low
 
